# pomelo-discord-bot

./: .env  .gitignore  .pre-commit-config.yaml  8ball_responses.txt  LICENSE  Procfile  README.md  fun.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: fun.py  mod.py  utils.py
data/: memes_shelf  pomeloLogs.txt  prefixes.json  todo_list.txt  token.json
src/: main.py  utilities.py
src/cogs/: fun.py  mod.py  utils.py
