[tool.poetry]
name = "pomelo-discord-bot"
version = "4.0.0"
description = "Discord bot for fun. Ripe, fresh and juicy."
authors = ["Mateusz Kuniczuk <matiusz98@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "pomelo_discord_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
"discord.py" = "^2.1.0"
discord = "^2.1.0"
flake8 = "^6.0.0"
matplotlib = "^3.6.2"
psutil = "^5.9.4"
googlemaps = "^4.7.3"
pandas = "^1.5.2"
pre-commit = "^2.20.0"
pymongo = "^4.3.3"
dnspython = "^2.2.1"
poetry = "^1.3.1"
python-dateutil = "^2.8.2"
requests = "^2.28.1"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
